DT-1485  Fixes text inputs design on iOS

--- a/stylesheet.less
+++ b/stylesheet.less
@@ -1891,6 +1891,19 @@ h1.menu-name {
     }
 }
 
+
+// Text Inputs
+.contactform input, .contactform textarea,
+.widget.profile form fieldset input.email,
+.signupform fieldset input.email,
+.blogsearch input.blog-search-input,
+.widget input[type="text"],
+.widget input[type="email"],
+.productlist-filter .productlist-search input,
+.signupform fieldset input {
+    -webkit-appearance: none;
+}
+
 /* Misc */
 
 .widget {
